@@ -84,14 +84,14 @@ you can find the complete list (in logical order):</p>
 <h3>uck-remaster-pack-rootfs</h3>
 
 <p>Usage:
-<pre># uck-remaster-pack-rootfs [remaster-dir]</pre>
+<pre># uck-remaster-pack-rootfs [remaster-dir] [-c|--clean-desktop-manifest]</pre>
 </p>
 
 <a name="uck-remaster-pack-iso"></a>
 <h3>uck-remaster-pack-iso</h3>
 
 <p>Usage:
-<pre># uck-remaster-pack-iso [iso-file-name.iso] [remaster-dir] [--generate-md5] [--arch=x86,x86_64,ia64,ppc]</pre>
+<pre># uck-remaster-pack-iso [iso-file-name.iso] [remaster-dir] [-g|--generate-md5] [-a|--arch=x86,x86_64,ia64,ppc]</pre>
 </p>
 
 <a name="uck-remaster-clean"></a>
