@@ -2,7 +2,7 @@
 
 ###################################################################################
 # UCK - Ubuntu Customization Kit                                                  #
-# Copyright (C) 2006  UCK Team                                                    #
+# Copyright (C) 2006-2007 UCK Team                                                #
 #                                                                                 #
 # This program is free software; you can redistribute it and/or                   #
 # modify it under the terms of the GNU General Public License                     #
@@ -155,6 +155,10 @@ function unpack_iso()
 {
 	echo "Unpacking ISO image..."
 	cp -a "$ISO_MOUNT_DIR" "$ISO_REMASTER_DIR" || failure "Failed to unpack ISO from $ISO_MOUNT_DIR to $ISO_REMASTER_DIR"
+	
+	#can't trap errors with diff because of its return codes,
+	#we pass the diff's output to cut cause we strip the version number
+	diff --unchanged-group-format='' "$ISO_REMASTER_DIR/casper/filesystem.manifest" "$ISO_REMASTER_DIR/casper/filesystem.manifest-desktop" | cut -d ' ' -f 1 > "$ISO_REMASTER_DIR/casper/manifest.diff"
 }
 
 function mount_squashfs()
@@ -280,7 +284,18 @@ function pack_rootfs()
 	if [ -e "$REMASTER_DIR" ]; then
 		echo "Updating files lists..."
 		chroot "$REMASTER_DIR" dpkg-query -W --showformat='${Package} ${Version}\n' > "$ISO_REMASTER_DIR/casper/filesystem.manifest" || failure "Cannot update filesystem.manifest, error=$?"
-		cp "$ISO_REMASTER_DIR/casper/filesystem.manifest" "$ISO_REMASTER_DIR/casper/filesystem.manifest-desktop" || failure "Failed to copy $ISO_REMASTER_DIR/casper/filesystem.manifest to $ISO_REMASTER_DIR/casper/filesystem.manifest-desktop"
+		if [ $CLEAN_DESKTOP_MANIFEST == 1 ] && [ -e "$ISO_REMASTER_DIR/casper/manifest.diff" ]; then
+			#stripping version number from manifest 
+			cat "$ISO_REMASTER_DIR/casper/filesystem.manifest" | cut -d ' ' -f 1 > "$ISO_REMASTER_DIR/filesystem.manifest.tmp"
+			# can't trap errors with diff because of its return codes
+			diff --unchanged-group-format='' "$ISO_REMASTER_DIR/filesystem.manifest.tmp" "$ISO_REMASTER_DIR/casper/manifest.diff" > "$ISO_REMASTER_DIR/filesystem.manifest-desktop.tmp"
+			#building the right manifest-desktop file
+			chroot "$REMASTER_DIR"  dpkg-query -W --showformat='${Package} ${Version}\n' `cat "$ISO_REMASTER_DIR/filesystem.manifest-desktop.tmp"` | egrep '.+ .+' > "$ISO_REMASTER_DIR/casper/filesystem.manifest-desktop"
+			#removing temp files
+			rm "$ISO_REMASTER_DIR/filesystem.manifest.tmp" "$ISO_REMASTER_DIR/filesystem.manifest-desktop.tmp"
+		else
+			cp "$ISO_REMASTER_DIR/casper/filesystem.manifest" "$ISO_REMASTER_DIR/casper/filesystem.manifest-desktop" || failure "Failed to copy $ISO_REMASTER_DIR/casper/filesystem.manifest to $ISO_REMASTER_DIR/casper/filesystem.manifest-desktop"
+		fi
 
 		echo "Packing SquashFS image..."
 		if [ -e "$ISO_REMASTER_DIR/casper/filesystem.squashfs" ]; then
@@ -348,7 +363,7 @@ function pack_iso()
 
 	#skip boot.cat, isolinux.bin, md5sums.txt
 	#mismatches are for those files, because they are generated by mkisofs or by generating MD5 sums:
-	EXCLUDED_FROM_MD5="./isolinux/isolinux.bin ./isolinux/boot.cat ./md5sum.txt"
+	EXCLUDED_FROM_MD5="./isolinux/isolinux.bin ./isolinux/boot.cat ./md5sum.txt ./manifest.diff"
 	EXCLUDED_FROM_MD5_EXPRESSION=$(echo $EXCLUDED_FROM_MD5 | tr ' ' '|')
 	EXCLUDED_FROM_MD5_EXPRESSION="($EXCLUDED_FROM_MD5_EXPRESSION)"
 
@@ -378,19 +393,23 @@ function pack_iso()
 			-probe -map "$UCK_LIBRARIES_DIR/hfs.map" -chrp-boot -iso-level 2 \
 			-part -no-desktop -r --netatalk -hfs \
 			-hfs-bless "$ISO_REMASTER_DIR/install" \
+			-x "$ISO_REMASTER_DIR"/casper/manifest.diff \
 			-V "$LIVECD_ISO_DESCRIPTION" \
+			$MKISOFS_EXTRA_OPTIONS \
 			"$ISO_REMASTER_DIR"
 	elif [ "$1" = "x86_64" ]; then
 		mkisofs -o "$NEW_FILES_DIR/$NEW_ISO_FILE_NAME" \
 			-b "isolinux/isolinux.bin" -c "isolinux/boot.cat" \
 			-p "Ubuntu Customization Kit - http://uck.sf.net" \
 			-no-emul-boot -V "$LIVECD_ISO_DESCRIPTION" -r -J -l \
+			-x "$ISO_REMASTER_DIR"/casper/manifest.diff \
 			$MKISOFS_EXTRA_OPTIONS \
 			"$ISO_REMASTER_DIR"
 	elif [ "$1" = "ia64" ]; then
 		mkisofs -o "$NEW_FILES_DIR/$NEW_ISO_FILE_NAME" \
 		-b "isolinux/isolinux.bin" -c "isolinux/boot.cat" \
 		-no-emul-boot -V "$LIVECD_ISO_DESCRIPTION" -J -r \
+		-x "$ISO_REMASTER_DIR"/casper/manifest.diff \
 		$MKISOFS_EXTRA_OPTIONS \
 		"$ISO_REMASTER_DIR"
 	else
@@ -399,6 +418,7 @@ function pack_iso()
 			-p "Ubuntu Customization Kit - http://uck.sf.net" \
 			-no-emul-boot -boot-load-size 4 -boot-info-table \
 			-V "$LIVECD_ISO_DESCRIPTION" -cache-inodes -r -J -l \
+			-x "$ISO_REMASTER_DIR"/casper/manifest.diff \
 			$MKISOFS_EXTRA_OPTIONS \
 			"$ISO_REMASTER_DIR"
 	fi
